package create.builderPattern;

public class Noodles {

    public String name;
    public String noodleShape;
    public int noodleWidth;
    public String ingredients;

}
